Follow macOS v10.13.4（17E199）